--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
+    "express": "^4.18.2",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@commitlint/config-conventional": "^17.0.0",
     "@jest/globals": "^28.0.0",
     "@jest/types": "^28.0.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^27.4.1",
     "@types/node": "^18.0.0",
     "@types/supertest": "^2.0.12",
